# 715eval

./: CS715 Model Validation (Responses) - Form responses 1.csv  analyze_predictions.py  bart_results.csv  create_ground_truth.py  evaluate_bart.py  evaluate_gpt4.py  gpt4_results.csv  map_goemotions_csv_to_occ.py  occ_ground_truth.csv  occ_relabeled_for_review.csv  occ_sample.csv  occ_sample.jsonl  pyproject.toml  relabel_with_occ.py  requirements.txt  run_bart_on_validation.py
